--- a/style/main.less
+++ b/style/main.less
@@ -11,7 +11,7 @@
          url('../fonts/roboto-v30-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
   }
   @font-face { src: url("../fonts/assassin.woff2") format("woff2"); font-family: "assassin-st"; font-weight: 700; font-style: italic; }
-
+  @font-face { src: url("../fonts/DMSans-Regular.woff2") format("woff2"); font-family: "dm sans"; font-weight: 400; font-style: Sans-serif; }
   :root {
 	--accent: #CC8869;
 	--padding: 120px;
@@ -1183,7 +1183,7 @@ footer{
             line-height: 1.6em;
             font-family: 'Roboto';
         }  
-        p{
+        .paragraph__footer-p{
             font-size: 14px;
             line-height: 1.6em;
             font-family: 'Roboto';
@@ -1226,28 +1226,28 @@ footer{
         grid-area: paragraph__footer;
     }
     .subscribe__footer{
+        .subscribe__footer-placeholder{
+            margin-top: -15px;
+        }
         .subscribe__footer-email{
             margin: 17px 0 0;
             p{
+                font-family: dm sans,Sans-serif;
                 font-size: 14px;
-                line-height: 1.6em;
-                
+                line-height: 1.6em; 
             }
             strong{
-                font-size: 14px;
-                line-height: 1.6em;
+                a{
+                    font-family: dm sans,Sans-serif;
+                    font-size: 14px;
+                    line-height: 1.6em; 
+                    text-transform: capitalize;
+                }
             }
-
+            
+            
         }
-        p{
-            font-size: 14px;
-            line-height: 1.6em;
         
-        }
-        strong{
-            font-size: 14px;
-            line-height: 1.6em;
-        }
         .subscribe__footer-input{
             display: flex;
             border-style: solid;
