--- a/style/main.less
+++ b/style/main.less
@@ -1173,6 +1173,8 @@ footer{
             line-height: 2.7em;
             letter-spacing: -.28px;
             text-transform: capitalize;
+            font-family: dm sans,Sans-serif;
+    
         }
         h4{
             padding-bottom: 32px;
@@ -1181,12 +1183,13 @@ footer{
             font-weight: 600;
             text-transform: capitalize;
             line-height: 1.6em;
-            font-family: 'Roboto';
+            font-family: dm sans,Sans-serif;
+    
         }  
         .paragraph__footer-p{
+            font-family: dm sans,Sans-serif;
             font-size: 14px;
             line-height: 1.6em;
-            font-family: 'Roboto';
         } 
         .column{
             display: flex;
@@ -1254,6 +1257,9 @@ footer{
             border-width: 1px;
             border-color: #fff;
             input{
+                font-family: dm sans,Sans-serif;
+                font-size: 14px;
+                line-height: 1.6em;
                 text-indent: 10px;
                 width: 230%;
                 border-width:0px;
