--- a/style/main.less
+++ b/style/main.less
@@ -1162,10 +1162,10 @@ footer{
         grid-gap: 0.2rem;
         
         grid-template-areas: 
-            "column__footer-one column__footer-four column__footer-three column__footer-two paragraph__footer"
-            "column__footer-one column__footer-five column__footer-three column__footer-two subscribe__footer"
-            "column__footer-one column__footer-five column__footer-three column__footer-two follow__footer"
-            "column__footer-one column__footer-five column__footer-three column__footer-two copyright__footer";
+            "column__footer-one column__footer-two column__footer-four column__footer-five paragraph__footer"
+            "column__footer-one column__footer-three column__footer-four column__footer-five subscribe__footer"
+            "column__footer-one column__footer-three column__footer-four column__footer-five follow__footer"
+            "column__footer-one column__footer-three column__footer-four column__footer-five copyright__footer";
         a{
             color: white;
             font-size: 14px;
@@ -1299,7 +1299,7 @@ footer{
         .follow__footer-icons{
         
         a{
-            padding-right: 10px;
+            padding-right: 13px;
             &:last-child{
                 padding-right: 0;
             }
