--- a/style/main.less
+++ b/style/main.less
@@ -1315,6 +1315,7 @@ footer{
     }
     .copyright__footer{
        p{
+        font-family: dm sans,Sans-serif;
         font-size: 14px;
         font-weight: 400;
         line-height: 2.7em;
