--- a/style/main.less
+++ b/style/main.less
@@ -52,13 +52,13 @@ html{
 }
 
 a{
-    font-family: 'Roboto';
+    font-family: dm sans,Sans-serif;
     text-decoration: none;
     color: #000;
 }
 
 h1{
-    font-family: 'Roboto';
+    font-family: dm sans,Sans-serif;
     text-decoration: none;
     color: #000;
 }
@@ -165,7 +165,7 @@ h1{
     transform: scaleX(0);
     transform-origin: left;
     transition: transform 0.5s ease;
-
+    font-family: dm sans,Sans-serif;
 
 }
 .logo__text:hover::after{
@@ -315,17 +315,17 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
             justify-content: space-between;
             height: 8rem;
             .header__logo{
-               
+                font-family: dm sans,Sans-serif;
                 .logo__text{
                     font-size: 36px;
                     position: relative;
                     z-index: 8;
                     color: white;
                     letter-spacing: 3px;
-                    font-family: 'Roboto';
+                    
                     font-style: normal;
                     font-weight: 400;
-                    
+                    font-family: dm sans,Sans-serif;
                 }
                 
                 
@@ -360,6 +360,7 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
                         align-items: center;
                         
                         .menu__link{
+                            font-family: dm sans,Sans-serif;
                             color: white; 
                             font-size: 18px;
                             padding: 24px 0px;
@@ -380,6 +381,8 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
                                 .menu__sub-link__title{
                                     color: white;
                                     margin-top: 10px;
+                                    font-weight: 600;
+                                    text-transform: capitalize;
                                 }
                                 .menu__sub-link{
                                     display: flex;
@@ -387,7 +390,7 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
                                     color: #9d9d9d;
                                     padding-bottom: 5px;
                                     font-weight: 600;
-                                    font-family: 'Roboto';
+                                    font-family: dm sans,Sans-serif;
                                     font-size: 18px;
                                     line-height: 100%;
                                     &:hover{
@@ -765,7 +768,7 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
                 top: 0;
                 left: 40%;
                 margin: 20px;
-
+                font-family: dm sans,Sans-serif;
             }
             
             padding: 85px 20px 20px 20px;
@@ -776,6 +779,7 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
             
             
             h1{
+                font-family: dm sans,Sans-serif;
                 color: white;
                 position: absolute;
                 top: 97px;
@@ -1073,7 +1077,7 @@ body._mobile .menu__list > li._active .menu__sub-list{
           margin-top: -3px;  
           grid-area: header;
           font-size: 42px;
-          
+          font-family: dm sans,Sans-serif;
           text-transform: uppercase;
           font-weight: 300;
           line-height: 34px;
@@ -1088,12 +1092,12 @@ body._mobile .menu__list > li._active .menu__sub-list{
             flex-direction: column;
           }
               p{
-                  
+                font-family: dm sans,Sans-serif; 
                 font-size: 22px;
                 margin-top: -3px;
                 }
               a{
-                  
+                font-family: dm sans,Sans-serif; 
                 font-size: 12px;
                 text-transform: uppercase;
                 display: flex;
