--- a/style/main.css
+++ b/style/main.css
@@ -880,7 +880,7 @@ footer .footer__container a {
   font-family: dm sans, Sans-serif;
 }
 footer .footer__container h4 {
-  padding-bottom: 40px;
+  padding-bottom: 32px;
   color: #FF7BE5;
   font-size: 20px;
   font-weight: 600;
@@ -976,7 +976,7 @@ footer .footer__container .follow__footer {
   grid-area: follow__footer;
 }
 footer .footer__container .follow__footer .follow__footer-icons a {
-  padding-right: 13px;
+  margin-right: 10px;
 }
 footer .footer__container .follow__footer .follow__footer-icons a:last-child {
   padding-right: 0;
@@ -1001,11 +1001,8 @@ footer .footer__container .copyright__footer p {
   footer .footer__container {
     padding: 64px 24px;
     grid-template-columns: 1fr;
-    grid-template-rows: 510px 210px 243px 362px 500px 230px 221px 55px 25px;
+    grid-template-rows: 502px 208px 241px 350px 500px 225px 213px 55px 26px;
     grid-template-areas: "column__footer-one" "column__footer-two" "column__footer-three" "column__footer-four" "column__footer-five" "paragraph__footer" "subscribe__footer" "follow__footer" "copyright__footer";
-  }
-  footer .footer__container .follow__footer .follow__footer-icons a {
-    padding-right: 10px;
   }
 }
 .svganimate__container {
