--- a/style/main.less
+++ b/style/main.less
@@ -87,7 +87,7 @@ h1{
     margin-top: -3px;
     left: 0;
   }
-  
+
   ._lock svg{
     
     z-index: 88;
@@ -1177,7 +1177,7 @@ footer{
     
         }
         h4{
-            padding-bottom: 40px;
+            padding-bottom: 32px;
             color: #FF7BE5;
             font-size: 20px;
             font-weight: 600;
@@ -1299,7 +1299,7 @@ footer{
         .follow__footer-icons{
         
         a{
-            padding-right: 13px;
+            margin-right: 10px;
             &:last-child{
                 padding-right: 0;
             }
@@ -1331,13 +1331,12 @@ footer{
 
 
 
-
 @media only screen and (max-width: 1900px){
     footer .footer__container{
-    padding: 64px 24px;
-    grid-template-columns: 1fr;
-    grid-template-rows: 510px 210px 243px 362px 500px 230px 221px 55px 25px;
-    grid-template-areas:
+        padding: 64px 24px;
+        grid-template-columns: 1fr;
+        grid-template-rows: 502px 208px 241px 350px 500px 225px 213px 55px 26px;
+        grid-template-areas:
         "column__footer-one"
         "column__footer-two"
         "column__footer-three"
@@ -1347,12 +1346,9 @@ footer{
         "subscribe__footer"
         "follow__footer"
         "copyright__footer";
-        
     }
-    footer .footer__container .follow__footer .follow__footer-icons a {
-        padding-right: 10px;
-    }
-}    
+}
+
 
 
     .svganimate__container{
