--- a/style/main.less
+++ b/style/main.less
@@ -43,6 +43,7 @@ html, body {
 @10:#F9ED69;
 @10:#F38181;
 @11:#FCE38A;
+@12:#FF7BE5;
 
 html{
     box-sizing: border-box;
@@ -870,10 +871,20 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
             font-size: 22px;
             left: 0;
             margin: 10px;
+            color: @12;
+            font-size: 20px;
+            font-weight: 600;
+            text-transform: capitalize;
+            line-height: 1.6em;
+            font-family: dm sans, Sans-serif;
         }
         .loading-lazy__section .loading-lazy__container .loading-lazy__box h1{
-            top: 50px;
+            top: 62px;
             left: 10px;
+            font-family: roboto;
+            font-size: 14px;
+            line-height: 1.6em;
+            padding-right: 10px;
         }
         .swiper-slider{
             margin: 5px 0px 5px 0px;
