--- a/style/main.less
+++ b/style/main.less
@@ -1883,7 +1883,7 @@ body .footer__container .paragraph__section{
     justify-items: center;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    //grid-template-rows: 1fr 1fr 1fr 1fr;
     grid-template-areas: 
     "one"
     "two"
@@ -1901,10 +1901,18 @@ body .footer__container .paragraph__section{
     .four{
         grid-area: four;
     }
+    .accordion__section-description{
+        position: relative;
+        height: 0;
+        overflow: hidden;
+        background-color: @1;
+        color: white;
+        transition: 0.5s;
+        overflow-y: auto;
+    
+}
     .accordion__section-container{
         width: 800px;
-        height: 200px;
-        
         
         .accordion__section-title{
             height: 40px;
@@ -1920,22 +1928,20 @@ body .footer__container .paragraph__section{
                 font-size: 1.5em;
                 transform: translateY(-50%);
             }
-
+            
         }
-        .accordion__section-description{
-            position: relative;
-            height: 0;
-            overflow: hidden;
-            background-color: @1;
-            color: white;
-            transition: 0.5s;
-            overflow-y: auto;
-        }    
+       
     }
 }
-.accordion__section-container.active .accordion__section-description{
-    height: 150px;
+.accordion__section .accordion__section-container.active .accordion__section-title{
+    &::before{
+        content: "-";
+        
+    }
+}
+.accordion__section .accordion__section-container.active .accordion__section-description{
     padding: 10px;
+    height: 150px;
 
 }
 
