--- a/style/main.less
+++ b/style/main.less
@@ -229,6 +229,7 @@ body .inverted {
   }
   .header.inverted .header__container .menu__body .menu__list li .menu__link {
     color: #000;
+    font-weight: 600;
   }
   
 
