--- a/style/main.less
+++ b/style/main.less
@@ -226,6 +226,7 @@ body .inverted {
   }
   .header.inverted .header__container .header__logo .logo__text {
     color: #000;
+    font-weight: 600;
   }
   .header.inverted .header__container .menu__body .menu__list li .menu__link {
     color: #000;
