--- a/style/main.less
+++ b/style/main.less
@@ -1348,7 +1348,6 @@ footer{
     footer .footer__container{
         padding: 64px 24px;
         grid-template-columns: 1fr;
-        grid-template-rows: 502px 208px 241px 350px 500px 225px 213px 55px 26px;
         grid-template-areas:
         "column__footer-one"
         "column__footer-two"
@@ -1360,6 +1359,23 @@ footer{
         "follow__footer"
         "copyright__footer";
     }
+
+    
+.footer__container .column__footer-one.active .column__footer-one-elements{
+    height: 502px;   
+ }
+ .footer__container .column__footer-one .column__footer-one-elements{ 
+    position: relative;
+    height: 0;
+    overflow: hidden;
+    transition: 0.5s;
+    overflow-y: auto;
+}
+footer .footer__container{
+    grid-template-rows: none;
+}
+
+
 }
 
 
