footer accordion is being built five columns done

--- a/style/main.less
+++ b/style/main.less
@@ -1371,6 +1371,46 @@ footer{
     transition: 0.5s;
     overflow-y: auto;
 }
+.footer__container .column__footer-two.active .column__footer-two-elements{
+    height: 208px;   
+ }
+.footer__container .column__footer-two .column__footer-two-elements{ 
+    position: relative;
+    height: 0;
+    overflow: hidden;
+    transition: 0.5s;
+    overflow-y: auto;
+}
+.footer__container .column__footer-three.active .column__footer-three-elements{
+    height: 241px;   
+ }
+.footer__container .column__footer-three .column__footer-three-elements{ 
+    position: relative;
+    height: 0;
+    overflow: hidden;
+    transition: 0.5s;
+    overflow-y: auto;
+}
+.footer__container .column__footer-four.active .column__footer-four-elements{
+    height: 350px;   
+ }
+.footer__container .column__footer-four .column__footer-four-elements{ 
+    position: relative;
+    height: 0;
+    overflow: hidden;
+    transition: 0.5s;
+    overflow-y: auto;
+}
+.footer__container .column__footer-five.active .column__footer-five-elements{
+    height: 500px;   
+ }
+.footer__container .column__footer-five .column__footer-five-elements{ 
+    position: relative;
+    height: 0;
+    overflow: hidden;
+    transition: 0.5s;
+    overflow-y: auto;
+}
 footer .footer__container{
     grid-template-rows: none;
 }
