--- a/style/main.less
+++ b/style/main.less
@@ -1411,6 +1411,22 @@ footer{
     transition: 0.5s;
     overflow-y: auto;
 }
+///////////////////////////////////////////////////////////////////////////////////
+.footer__container .paragraph__footer {
+    height: 225px;   
+ }
+ .footer__container .subscribe__footer{
+    height: 213px;   
+ }
+ .footer__container .follow__footer{
+    height: 55px;   
+ }
+ .footer__container .copyright__footer{
+    height: 26px;   
+ }
+
+
+/////////////////////////////////////////////////////////////////////////////////////
 footer .footer__container{
     grid-template-rows: none;
 }
