footer accordion is done v. 1.0.0  svg-icon +- done

--- a/style/main.css
+++ b/style/main.css
@@ -1032,6 +1032,18 @@ footer .footer__container .copyright__footer p {
   .footer__container .column__footer-one.active .svg-icon::before {
     content: "-";
   }
+  .footer__container .column__footer-two.active .svg-icon::before {
+    content: "-";
+  }
+  .footer__container .column__footer-three.active .svg-icon::before {
+    content: "-";
+  }
+  .footer__container .column__footer-four.active .svg-icon::before {
+    content: "-";
+  }
+  .footer__container .column__footer-five.active .svg-icon::before {
+    content: "-";
+  }
   .footer__container .column__footer-one.active .column__footer-one-elements {
     height: 502px;
   }
