--- a/style/main.less
+++ b/style/main.less
@@ -1381,6 +1381,34 @@ footer{
             }
         }
     }
+    .footer__container .column__footer-two.active{
+        .svg-icon{
+            &::before{
+                content: "-";
+            }
+        }
+    }
+    .footer__container .column__footer-three.active{
+        .svg-icon{
+            &::before{
+                content: "-";
+            }
+        }
+    }
+    .footer__container .column__footer-four.active{
+        .svg-icon{
+            &::before{
+                content: "-";
+            }
+        }
+    }
+    .footer__container .column__footer-five.active{
+        .svg-icon{
+            &::before{
+                content: "-";
+            }
+        }
+    }
 
 
 .footer__container .column__footer-one.active .column__footer-one-elements{
