padding: 0px 30px; header mobile logo

--- a/style/main.css
+++ b/style/main.css
@@ -301,6 +301,9 @@ body .inverted .header__container {
   position: absolute;
 }
 @media only screen and (max-width: 1900px) {
+  .header .header__container {
+    padding: 0px 15px;
+  }
   .header__img {
     width: 100vw;
     height: 100vh;
@@ -1026,7 +1029,7 @@ footer .footer__container .copyright__footer p {
     position: absolute;
     top: 50%;
     right: 186px;
-    font-size: 1.5em;
+    font-size: 20px;
     transform: translateY(-100%);
   }
   .footer__container .column__footer-one.active .svg-icon::before {
