--- a/style/main.less
+++ b/style/main.less
@@ -425,6 +425,10 @@ body .inverted .header__container .menu__body .menu__list li .menu__sub-list::be
     }
 }
 @media only screen and (max-width: 1900px){
+
+    .header .header__container {
+        padding: 0px 15px;
+    }
     .header__img{
         width: 100vw;
         height: 100vh;
@@ -1370,7 +1374,7 @@ footer{
             position: absolute;
             top: 50%;
             right: 186px;
-            font-size: 1.5em;
+            font-size: 20px;
             transform: translateY(-100%);
         }
     }
