--- a/style/main.css
+++ b/style/main.css
@@ -171,7 +171,6 @@ body .inverted {
 }
 .header.inverted .header__container .menu__body .menu__list li .menu__link {
   color: #000;
-  font-weight: 600;
 }
 body .inverted .header__container .menu__body .menu__list li .menu__sub-list::before {
   border-color: transparent transparent #222831 transparent;
@@ -1028,7 +1027,7 @@ footer .footer__container .copyright__footer p {
     content: "+";
     position: absolute;
     top: 50%;
-    right: 186px;
+    padding-left: 150px;
     font-size: 20px;
     transform: translateY(-100%);
   }
