--- a/style/main.less
+++ b/style/main.less
@@ -230,7 +230,7 @@ body .inverted {
   }
   .header.inverted .header__container .menu__body .menu__list li .menu__link {
     color: #000;
-    font-weight: 600;
+    
   }
   
 
@@ -1373,7 +1373,7 @@ footer{
             content: "+";
             position: absolute;
             top: 50%;
-            right: 186px;
+            padding-left: 150px;
             font-size: 20px;
             transform: translateY(-100%);
         }
