--- a/style/main.less
+++ b/style/main.less
@@ -1685,6 +1685,7 @@ footer .footer__container{
     } 
     ._lock .header .header__container .header__logo .logo__text{
         color: #000;
+        font-weight: 600;
     } 
 
     ._lock .menu__icon::before{
