--- a/style/main.less
+++ b/style/main.less
@@ -1,3 +1,13 @@
+
+
+@font-face {
+    font-family: 'FontAwesome';
+    src: url('../fonts/fontawesome-webfont.eot');
+    src: url('../fonts/fontawesome-webfont.eot') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff2') format('woff2'), url('../fonts/fontawesome-webfont.woff') format('woff'), url('../fonts/fontawesome-webfont.ttf') format('truetype'), url('../fonts/fontawesome-webfont.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+  }
+
 @font-face {
     font-family: 'Roboto';
     font-style: normal;
@@ -2080,8 +2090,108 @@ body .footer__container .paragraph__section{
 }
 
 
+///////////////////////////////////////load_more_button///////////////////////////////////////////////////
+
+.load_more_button-container{
+    max-width: 1200px;
+    margin: 0 auto;
+    text-align: center;
+    padding:25px 20px;
+    .load_more_button-title{
+        text-transform: capitalize;
+        font-size: 40px;
+        margin-bottom: 20px;
+        color:#222831;
+    }
+    .load_more_button-boxes{
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+        gap:20px;
+        .load_more_button-box{
+            background-color: #fff;
+            padding:20px;
+            border-radius: 5px;
+            box-shadow: 0 5px 10px rgba(0,0,0,.2);
+            display: none;
+            &:nth-child(1),
+            &:nth-child(2),
+            &:nth-child(3){
+                display: inline-block;
+            }
+            .load_more_button-image{
+                    margin-bottom: 20px;
+                    overflow: hidden;
+                    height: 250px;
+                    border-radius: 5px;
+                    img{
+                        height: 100%;
+                        width: 100%;
+                        object-fit: cover;
+                    }
+                }
+                .load_more_button-content{
+                    h3{
+                        text-transform: capitalize;
+                        font-size: 20px;
+                        color:#222831;
+                    }
+                    p{
+                        font-size: 15px;
+                        color:#222831;
+                        line-height: 2;
+                        padding:15px 0;
+                    }
+                    .load_more_button-btn{
+                        display: inline-block;
+                        padding:10px 30px;
+                        border:1px solid #334;
+                        color:#222831;
+                        font-size: 16px;
+                        text-transform: capitalize;
+                        &:hover{
+                            background-color: #92003B;
+                            border-color: #92003B;
+                            color:#fff;
+                        }
+                    }
+                    .load_more_button-icons{
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-between;
+                        margin-top: 20px;
+                        padding-top: 15px;
+                        border-top:1px solid #222831;
+                        span{
+                            font-size: 14px;
+                            color:#222831;
+                            i{
+                                color:#92003B;
+                                padding-right: 5px;
+                            }
+                        }
+                        
+                    }
+                }
+            }
+        }
+    #load-more{
+        text-transform: capitalize;
+        margin-top: 20px;
+        display: inline-block;
+        padding:13px 30px;
+        border:1px solid #222831;
+        color:#222831;
+        font-size: 16px;
+        background-color: #fff;
+        cursor: pointer;
+        &:hover{
+            background-color: #92003B;
+            border-color: #92003B;
+            color:#fff;
+        }
+    }
+}
 
 
-
-
+///////////////////////////////////////load_more_button///////////////////////////////////////////////////
 
