some pages correction

--- a/style/main.css
+++ b/style/main.css
@@ -16,13 +16,13 @@
   /* Legacy iOS */
 }
 @font-face {
-  src: url("../fonts/assassin.woff2") format("woff2");
+  src: url("../style/fonts/assassin.woff2") format("woff2");
   font-family: "assassin-st";
   font-weight: 700;
   font-style: italic;
 }
 @font-face {
-  src: url("../fonts/DMSans-Regular.woff2") format("woff2");
+  src: url("../style/fonts/DMSans-Regular.woff2") format("woff2");
   font-family: "dm sans";
   font-weight: 400;
   font-style: Sans-serif;
@@ -1209,7 +1209,6 @@ footer .footer__container .copyright__footer p {
     padding: 12px 0px;
   }
   .menu__list .menu__sub-list {
-    transform: translate(-159px, 45%);
     opacity: 0;
     visibility: hidden;
     transition: all 0.4s ease 0s;
@@ -1641,4 +1640,21 @@ footer .footer__container .copyright__footer p {
   background-color: #92003B;
   border-color: #92003B;
   color: #fff;
+}
+@media only screen and (max-width: 500px) {
+  .load_more_button-container .load_more_button-title {
+    font-size: 25px;
+  }
+  .load_more_button-container .load_more_button-boxes {
+    grid-template-columns: 1fr;
+  }
+  .load_more_button-container .load_more_button-boxes .load_more_button-box .load_more_button-image {
+    height: 200px;
+  }
+  .load_more_button-container .load_more_button-boxes .load_more_button-box .load_more_button-content p {
+    font-size: 12px;
+  }
+  .load_more_button-container .load_more_button-boxes .load_more_button-box .load_more_button-content .load_more_button-icons span {
+    font-size: 12px;
+  }
 }
